--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "element-ui": "^2.12.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0",
+    "sass-resources-loader": "^2.0.1",
     "swiper": "^5.2.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
