--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "animejs": "^3.1.0",
     "element-ui": "^2.12.0",
+    "jquery": "^3.4.1",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0",
     "sass-resources-loader": "^2.0.1",
