--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
     "animejs": "^3.1.0",
     "axios": "^0.19.0",
     "element-ui": "^2.12.0",
+    "gsap": "^3.0.1",
     "jquery": "^3.4.1",
+    "mint-ui": "^2.2.13",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0",
     "sass-resources-loader": "^2.0.1",
     "swiper": "^5.2.0",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
